# django-jardin

./: .gitignore  Dockerfile  Prod.Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-prod.yml
app/: Dockerfile  Prod.Dockerfile  entrypoint.prod.sh  entrypoint.sh  manage.py
app/django_jardin/: asgi.py  settings.py  urls.py  wsgi.py
app/jardin_data/: admin.py  api.py  models.py  signals.py  urls.py  utils.py
app/jardin_data/migrations/: 0001_initial.py  0002_remove_sensordata_sensor_delete_sensor.py  0003_sensordata_location_sensordata_sensor_name_and_more.py  0004_remove_sensordata_location_sensordata_sensor_id.py  0005_alter_sensordata_options_sensordata_device_id_and_more.py  0006_alter_sensordata_options_and_more.py
app/jardin_data/templates/admin/: index.html
nginx/: Dockerfile  nginx.conf  nginx.local.conf
