[tool.poetry]
name = "django-jardin"
version = "0.1.0"
description = "Data Management for \"Le Jardin\""
authors = ["Marc Widmer <marc@pbi.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
django-shinobi = "^1.4.0a0"
ninja-api-key = "^1.0.2"
requests = "^2.32.3"
django-unfold = "^0.71.0"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
